--- a/assets/website/about-us.html
+++ b/assets/website/about-us.html
@@ -82,15 +82,15 @@ $(document).ready(function(){
             	<div class="imgbox">
                 	<img src="images/[center_left_image]" alt="god">
                     <div class="title-overlay">
-                    	<h4>Family Praying</h4>
-                        <span>Main Pray Area</span>
+                    	<h4>[center_left_heading]</h4>
+                        <span>[center_left_heading_text]</span>
                     </div>
                 </div>
                 <div class="imgbox right">
                 	<img src="images/[center_right_image]" alt="god">
                     <div class="title-overlay">
-                    	<h4>Family Praying</h4>
-                        <span>Main Pray Area</span>
+                    	<h4>[center_right_heading]</h4>
+                        <span>[center_right_heading_text]</span>
                     </div>
                 </div>
             </div>
