--- a/assets/website/contact.html
+++ b/assets/website/contact.html
@@ -33,6 +33,13 @@ $(document).ready(function(){
 </script>
 <!--------------- js ---------------->
 
+<style type="text/css">
+    .buttoncolor
+    {
+         background: [color_code] !important;
+    }
+</style>
+
 </head>
 <body>
 
@@ -71,8 +78,8 @@ $(document).ready(function(){
                 	<textarea name="" cols="" rows="" class="textarea" placeholder="Write your message here..."></textarea>
                 </div>
                 <div class="row">
-                	<span class="right"><a href="mailto:hello@getreplacer.com">hello@getreplacer.com</a></span>
-                	<input type="submit" class="submit-btn" value="Submit">
+                	<span class="right"><a href="mailto:hello@getreplacer.com">[contact_email]</a></span>
+                	<input type="submit" class="submit-btn buttoncolor" value="Submit">
                 </div>
             </div>
             <div class="col2">
