--- a/assets/website/donate.html
+++ b/assets/website/donate.html
@@ -32,7 +32,12 @@ $(document).ready(function(){
 });
 </script>
 <!--------------- js ---------------->
-
+<style type="text/css">
+    .buttoncolor
+    {
+         background: [color_code] !important;
+    }
+</style>
 </head>
 <body>
 
@@ -47,7 +52,7 @@ $(document).ready(function(){
                 <li><a href="#">Events</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Login</a></li>
-                <li><a href="#" class="donate">Donate</a></li>
+                <li><a href="#" class="donate buttoncolor">Donate</a></li>
             </ul>
         </div>
     </div>
@@ -91,7 +96,7 @@ $(document).ready(function(){
                         <label><input name="" type="checkbox" class="checkbox" value=""> Custom</label>
                     </div>
                     <div class="row">
-                    	<input type="submit" class="submit-btn" value="Submit">
+                    	<input type="submit" class="submit-btn buttoncolor" value="Submit">
                     	<span class="left">Your Data is Secured.</span>
                     </div>
                 </div>
