--- a/assets/website/index.html
+++ b/assets/website/index.html
@@ -32,7 +32,12 @@ $(document).ready(function(){
 });
 </script>
 <!--------------- js ---------------->
-
+<style type="text/css">
+    .buttoncolor
+    {
+         background: [color_code] !important;
+    }
+</style>
 </head>
 <body>
 
@@ -60,7 +65,7 @@ $(document).ready(function(){
 	<div class="showcase-text">
     	<h3>[banner_heading]</h3>
         <p>[banner_text]</p>
-        <a href="#">Google.Play</a>
+        <!-- <a href="#">Google.Play</a> -->
     </div>
 </div>
 
@@ -69,18 +74,18 @@ $(document).ready(function(){
     	<div class="box">
         	<div class="col1">
             	<img src="images/[keypoint_first_image]" alt="god">
-                <h2>God  first</h2>
-                <p>Doctus temporibus ius no, nec tollit conceptam definiebas te. Alii appetere dissentias. Doctus temporibus</p>
+                <h2>[keypoint_first_heading]</h2>
+                <p>[keypoint_first_text]</p>
             </div>
             <div class="col1">
             	<img src="images/[keypoint_second_image]" alt="burn">
-                <h2>Burn Candles</h2>
-                <p>Vel et munere expetenda honestatis. Ex sonet audiam Vel et munere expetenda honestatis. Ex sonet audiam set amet</p>
+                <h2>[keypoint_second_heading]</h2>
+                <p>[keypoint_second_text]</p>
             </div>
             <div class="col1">
             	<img src="images/[keypoint_third_image]" alt="follow">
-                <h2>Follow the Path</h2>
-                <p>Graeco aperiri nec no. Mea iusto detraxit an. Essent patrioque id. Graeco aperiri nec no. At ancillae dissentias eos</p>
+                <h2>[keypoint_third_heading]</h2>
+                <p>[keypoint_third_image]</p>
             </div>
         </div>
     </div>
@@ -110,7 +115,7 @@ $(document).ready(function(){
                 <input type="text" class="input">
              </div>
              <div class="row btn">
-                <input type="submit" class="signup-btn" value="Sign Up">
+                <input type="submit" class="signup-btn buttoncolor" value="Sign Up">
              </div>
              <div class="terms">By Sign Up, you agree to our Terms and Data Policy</div>
         </div>
@@ -129,7 +134,7 @@ $(document).ready(function(){
                 <li class="instagram"><a href="#">instagram</a></li>
             </ul>
         </div>
-    	<div class="footer-logo"><a href="#"><img src="images/footer-logo.jpg"></a></div>
+    	<div class="footer-logo"><a href="#"><img src="images/[image_tag]></a></div>
         <div class="footer-menu">
         	<ul>
             	<li><a href="#">Home</a></li>
